--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@ body {
   margin: auto;
   text-align: center;
   width: 100%;
-  
+  transform-origin: center;
+  transform: scale(.5);
 }
 
 .social {
